2008-01-05  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.[ch]:
	Add a Duplicate Disc menu item, which calls nautilus-cd-burner.
	(#361122, thanks Dave Meikle).

2008-01-05  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Show a better error message if we can't create the target
	directories (#354208, thanks MatzeB).

2008-01-05  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in.in:
	Remove Sound Juicer from the desktop file (#336727).

2008-01-05  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Pause the pipeline when switching track, so the first playback
	seeks to the correct track. (#507166, thank Bill O'Shea).

2008-01-05  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-extracting.c:
	Hide the progress bar unless ripping (#441297, thanks Ghee Teo)

2008-01-05  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Remove always-true test.

2008-01-05  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	* src/sj-extracting.c:
	As tracks are played or ripped, scroll the treeview to keep them
	in view. (#430780, thanks Dave Meikle).

2008-01-02  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	When changing album artist, only change track artists if they
	haven't been already changed (#122367, thanks Bill O'Shea).

2008-01-01  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.21.1.

2007-12-31  Jonh Wendell  <jwendell@gnome.org>

	* src/sj-genres.[ch]:
	* src/Makefile.am:
	Add sj-genre, to handle the genre entry, by saving custom genres.
	Closes #382677.

	* src/sj-main.c:
	Call setup_genre_entry() to setup the genre entry.

	* src/sj-extracting.c:
	Call save_genre() to save the custom genre when extracting.

2007-12-28  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Set the size of the progress bar to look better (#460650, thanks
	Stefan Oderbolz)

2007-12-24  Ross Burton  <ross@burtonini.com>
