@@ -1,3 +1,8 @@
+2008-01-06  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	Fix Duplicate Disc logic on startup (#361122, thanks Dave Meikle).
+
 2008-01-05  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.glade:
